@@ -1,11 +1,11 @@
  {
   "kernel": {
-    "name": "SilverCore Kernel Beryllium",
-    "version": "v3.1",
-    "link": "https://github.com/PainKiller3/kernel_xiaomi_sdm845/releases/download/3.1/SilverCore_v3.1_beryllium.zip",
+    "name": "SilverCore Kernel",
+    "version": "v3.2",
+    "link": "https://github.com/PainKiller3/kernel_xiaomi_sdm845/releases/download/3.2/SilverCore_v3.2_beryllium.zip",
     "changelog_url": "https://raw.githubusercontent.com/PainKiller3/kernel_xiaomi_sdm845/ten/updates/changelog.txt",
-    "date": "2020-03-13",
-    "sha1": "2fb4c266ca1c3631d6153e444708293ba7a989a5"
+    "date": "2020-03-16",
+    "sha1": "6f27fd8cc0f6cfee90b58e33a9ffc36244a52b63"
   },
   "support": {
     "link": "https://t.me/reignzupdate"
