@@ -1,4 +1,10 @@
 Changelog:
-- Upstream to latest linux tag v4.9.216
-- Fixed network speed monitor in MIUI
-- Fixed blu_scheduti governor & zen scheduler
+- Initial Dipper Build
+- Introduce Adreno idler
+- Add PIXUTIL, SMURFUTIL & PIXEL_SMURFUTIL Cpu governor
+- Add state notifier driver
+- Add simplified file blocker
+- Enable PM QoS for SDM845 rotator
+- Update techpack to the latest Q sources for Xiaomi 
+- qcacld-3.0: Reduce log spam 
+- Some Backport fixes
